# DeepSegmentation_Cpp

./: .gitignore  CMakeLists.txt  CONFIG_README.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  README.md  SEGMENTATION_DETECTOR_README.md  YOLO_MODEL_COMPATIBILITY_GUIDE.md  build_Libtorch.txt  config.json
YoloPy/: TestVideo.py  compare_accuracy.py  config.json  config_reader.py  export_onnx_flexible.py  requirements.txt  visualize_detections.py  yolo_batch_speed_test.py  yolo_box_detection.py  yolo_point_detection.py  yolo_segment_detection.py
YoloPy/output/points/: detected_points.json
include/: BatchPointProcessor.hpp  BatchSegmentationProcessor.hpp  Config.hpp  DetectionTypes.hpp  FastBatchProcessor.hpp  MemoryPool.hpp  PointDetector.hpp  SegmentationDetector.hpp  UnifiedYoloDetector.hpp  pch.hpp  pch_segmentation_batch.hpp  testOpenCV.hpp
output/: output_cpp.csv  output_py.csv
src/: BatchPointProcessor.cpp  BatchSegmentationProcessor.cpp  Config.cpp  DetectionTypes.cpp  PointDetector.cpp  SegmentationDetector.cpp  main_PointBatch.cpp  main_SegmentationBatch.cpp  main_UnifiedBatchProcessor.cpp  testOpenCV.cpp
tests/: CMakeLists.txt  README.md  TEST_SUMMARY.md  install_and_test.sh  test_csv_comparison.cpp  test_point_detection.cpp  test_utils.cpp  test_yolo_detector.cpp
